# cn-goverment-datasource

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-check.yml  release.yml
fd_cn_gov/: __init__.py  build_registry.py  cli.py  scraw_contract.py
fd_cn_gov/registry/: __init__.py
fd_cn_gov/scripts/: mee_gsgg_archive.py  mem_tzgg_archive.py  mnr_tzgg_archive.py  moa_govpublic_archive.py  mof_gkml_archive.py  mofcom_xwfb_archive.py  mohurd_xinwen_archive.py  mot_shuju_archive.py  ndrc_tzgg_archive.py  pbc_xinwen_archive.py  safe_whxw_archive.py
gov_scraw/: __init__.py  build_registry.py  cli.py  scraw_contract.py
gov_scraw/registry/: __init__.py  registry.db  registry.json
gov_scraw/scripts/: mee_gsgg_archive.py  mem_tzgg_archive.py  mnr_tzgg_archive.py  moa_govpublic_archive.py  mof_gkml_archive.py  mofcom_xwfb_archive.py  mohurd_xinwen_archive.py  mot_shuju_archive.py  ndrc_tzgg_archive.py  pbc_xinwen_archive.py  safe_whxw_archive.py
openspec/changes/publish-to-pypi/: design.md  proposal.md  tasks.md
openspec/changes/publish-to-pypi/specs/package-distribution/: spec.md
